// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  width: 100%;
  border: 1px solid #444;
  background-color: transparent;
  padding: 12px 16px;
  outline: 0;
  border-radius: 0px;
  margin-bottom: 10px;
  color: #000;
  resize: none;
}

.c0::-webkit-input-placeholder {
  color: #ccc;
}

.c0::-moz-placeholder {
  color: #ccc;
}

.c0:-ms-input-placeholder {
  color: #ccc;
}

.c0:-moz-placeholder {
  color: #ccc;
}

<input
  class="c0"
  name="nome"
  placeholder="Nome"
  type="text"
  value="Mario"
/>
`;

exports[`<TextField /> when field is invalid display the respective error message 1`] = `
.c0 {
  width: 100%;
  border: 1px solid #444;
  background-color: transparent;
  padding: 12px 16px;
  outline: 0;
  border-radius: 0px;
  margin-bottom: 10px;
  color: #000;
  resize: none;
}

.c0::-webkit-input-placeholder {
  color: #ccc;
}

.c0::-moz-placeholder {
  color: #ccc;
}

.c0:-ms-input-placeholder {
  color: #ccc;
}

.c0:-moz-placeholder {
  color: #ccc;
}

<input
  class="c0"
  name="email"
  placeholder="email"
  type="text"
  value="aa.com"
/>
`;
